# aws-diagram-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  EXAMPLES.md  LICENSE  README.md  TROUBLESHOOTING.md  USAGE.md  cli.py  mcp-config.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/aws_diagram_cli/: __init__.py  __main__.py  aws_discovery.py  cli.py
src/aws_diagram_cli/generators/: __init__.py
src/aws_diagram_mcp/: __init__.py  __main__.py  aws_discovery.py  diagrams_generator.py  mermaid_generator.py  server.py
src/cloud_diagram/: __init__.py  __main__.py  cli.py
src/cloud_diagram/config/: __init__.py  loader.py  schema.py
src/cloud_diagram/providers/: __init__.py
src/cloud_diagram/providers/aws/: __init__.py  config.yaml  diagram.py  discovery_v2.py
src/cloud_diagram/providers/aws/config/: __init__.py  hierarchical_loader.py
src/cloud_diagram/providers/aws/snippets/: __init__.py  base.py  registry.py
src/cloud_diagram/providers/aws/snippets/acm/: __init__.py
src/cloud_diagram/providers/aws/snippets/acm/certificate/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/ec2/: __init__.py
src/cloud_diagram/providers/aws/snippets/ec2/instance/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/ec2/security_group/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/ec2/subnet/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/ec2/vpc/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/elb/: __init__.py
src/cloud_diagram/providers/aws/snippets/elb/alb/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/elb/classic/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/elb/nlb/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/rds/: __init__.py
src/cloud_diagram/providers/aws/snippets/rds/db_instance/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/snippets/route53/: __init__.py
src/cloud_diagram/providers/aws/snippets/route53/hosted_zone/: __init__.py  config.yaml
src/cloud_diagram/providers/aws/utils/: __init__.py  discovery.py
tests/: CLI_MULTI_REGION_EXAMPLES.md  test_cli_regions.py  test_multi_region_cli.py
