[project]
name = "aws-diagram-mcp"
version = "0.2.0"
description = "MCP server for generating AWS infrastructure diagrams in Mermaid and DOT/Graphviz formats"
authors = [
    {name = "AWS Diagram MCP", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["aws", "infrastructure", "diagram", "mermaid", "graphviz", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "diagrams>=0.23.0",
    "graphviz>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]